Person and transaction models added

--- a/BlackBookExercise/BlackBookExercise/BlackBookExercise.csproj
+++ b/BlackBookExercise/BlackBookExercise/BlackBookExercise.csproj
@@ -63,6 +63,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="ViewModels\PersonsViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -104,7 +106,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAL\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
