--- a/BlackBookExercise/BlackBookExercise/packages.config
+++ b/BlackBookExercise/BlackBookExercise/packages.config
@@ -3,4 +3,5 @@
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Start" version="2.0.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
 </packages>
